--- a/migration-tool/mc2wc/mc2wc-receiver/pom.xml
+++ b/migration-tool/mc2wc/mc2wc-receiver/pom.xml
@@ -61,6 +61,16 @@
       <artifactId>persistence</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
