--- a/migration-tool/mc2wc/mc2wc-batch/pom.xml
+++ b/migration-tool/mc2wc/mc2wc-batch/pom.xml
@@ -13,6 +13,10 @@
       <artifactId>mc2wc-common</artifactId>
     </dependency>
     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
     </dependency>
@@ -31,6 +35,10 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.batch</groupId>
+      <artifactId>spring-batch-core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
@@ -87,6 +95,11 @@
       <groupId>com.github.springtestdbunit</groupId>
       <artifactId>spring-test-dbunit</artifactId>
       <version>1.0.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.batch</groupId>
+      <artifactId>spring-batch-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
