--- a/migration-tool/mc2wc/mc2wc-common/pom.xml
+++ b/migration-tool/mc2wc/mc2wc-common/pom.xml
@@ -44,9 +44,10 @@
       <artifactId>junit</artifactId>
     </dependency>
     <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <scope>test</scope>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
