--- a/migration-tool/mc2wc/pom.xml
+++ b/migration-tool/mc2wc/pom.xml
@@ -29,6 +29,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-transports-http</artifactId>
+        <version>${cxf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-databinding-jaxb</artifactId>
         <version>${cxf.version}</version>
       </dependency>
