--- a/migration-tool/mc2wc/mc2wc-common/pom.xml
+++ b/migration-tool/mc2wc/mc2wc-common/pom.xml
@@ -10,6 +10,9 @@
   <build>
     <resources>
       <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+      </resource>
+      <resource>  
         <directory>${project.build.directory}/generated-sources/jaxb</directory>
       </resource>
     </resources>
@@ -48,6 +51,22 @@
       <artifactId>javax.ws.rs-api</artifactId>
       <version>2.0</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.7.5</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
