--- a/migration-tool/migration-web/src/main/resources/batch-default.properties
+++ b/migration-tool/migration-web/src/main/resources/batch-default.properties
@@ -12,3 +12,10 @@ originalcertificate.writer.sql=UPDATE ORIGINAL_CERTIFICATE SET certificate_id = 
 
 # CheckCertificateExistsProcessor SQL statement
 certificate.check.sql=SELECT count(*) FROM CERTIFICATE WHERE id = ?
+
+certificate.reader2.sql.select=SELECT c.ID as id, c.DOCUMENT as document, cs.TIMESTAMP as ts
+certificate.reader2.sql.from=FROM CERTIFICATE c INNER JOIN CERTIFICATE_STATE cs ON c.ID = cs.CERTIFICATE_ID
+certificate.reader2.sql.where=WHERE cs.STATE = 'RECEIVED' ORDER BY ts ASC
+certificate.reader2.sortkey=id
+
+certificate.state.sql=SELECT count(*) FROM CERTIFICATE_STATE WHERE CERTIFICATE_ID = ? AND STATE = ?
