--- a/migration-tool/migration-web/src/main/webapp/WEB-INF/web.xml
+++ b/migration-tool/migration-web/src/main/webapp/WEB-INF/web.xml
@@ -1,58 +1,70 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="
+  xsi:schemaLocation="
 			http://java.sun.com/xml/ns/j2ee
 			http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	version="2.4">
+  version="2.4">
 
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:/application-context.xml</param-value>
-	</context-param>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath*:/application-context.xml</param-value>
+  </context-param>
 
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
 
-	<filter>
-		<filter-name>shallowEtagHeaderFilter</filter-name>
-		<filter-class>org.springframework.web.filter.ShallowEtagHeaderFilter</filter-class>
-	</filter>
+  <filter>
+    <filter-name>shallowEtagHeaderFilter</filter-name>
+    <filter-class>org.springframework.web.filter.ShallowEtagHeaderFilter</filter-class>
+  </filter>
 
-	<filter>
-		<filter-name>hiddenHttpMethodFilter</filter-name>
-		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
-	</filter>
+  <filter>
+    <filter-name>hiddenHttpMethodFilter</filter-name>
+    <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+  </filter>
 
-	<filter-mapping>
-		<filter-name>shallowEtagHeaderFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+  <filter-mapping>
+    <filter-name>shallowEtagHeaderFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
-	<filter-mapping>
-		<filter-name>hiddenHttpMethodFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+  <filter-mapping>
+    <filter-name>hiddenHttpMethodFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
-	<servlet>
-		<servlet-name>Batch Servlet</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:/org/springframework/batch/admin/web/resources/servlet-config.xml</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
+  <servlet>
+    <servlet-name>Batch Servlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath*:/org/springframework/batch/admin/web/resources/servlet-config.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
 
-	<servlet-mapping>
-		<servlet-name>Batch Servlet</servlet-name>
-		<url-pattern>/*</url-pattern>
-	</servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Batch Servlet</servlet-name>
+    <url-pattern>/*</url-pattern>
+  </servlet-mapping>
 
-	<resource-ref>
-		<res-ref-name>jdbc/intyg</res-ref-name>
-		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref>
+  <resource-ref>
+    <res-ref-name>jdbc/intyg</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
+  <resource-ref>
+    <res-ref-name>jms/ConnectionFactory</res-ref-name>
+    <res-type>javax.jms.ConnectionFactory</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
+  <resource-ref>
+    <res-ref-name>jms/Queue</res-ref-name>
+    <res-type>javax.jms.Queue</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 
 </web-app>
