--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -17,6 +17,8 @@
     <fitnesse.port>9123</fitnesse.port>
     <fitnesse.working>${project.basedir}/src/test/fitnesse</fitnesse.working>
     <fitnesse.root>FitNesseRoot</fitnesse.root>
+    <fitnesse.project.root>IneraCertificate</fitnesse.project.root>
+    <fitnesse.suite>${fitnesse.project.root}.TestFall</fitnesse.suite>
     <!-- This example has no unit tests, just integration tests -->
     <skipTests>true</skipTests>
     <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
@@ -116,25 +118,15 @@
         <configuration>
           <filesets>
             <fileset>
-              <directory>src/test/fitnesse/Resources</directory>
-            </fileset>
-            <fileset>
-              <directory>src/test/fitnesse/FitNesseRoot/ErrorLogs</directory>
-            </fileset>
-            <fileset>
-              <directory>src/test/fitnesse/FitNesseRoot/FitNesse</directory>
-            </fileset>
-            <fileset>
-              <directory>src/test/fitnesse/FitNesseRoot/PageHeader</directory>
-            </fileset>
-            <fileset>
-              <directory>src/test/fitnesse/FitNesseRoot/RecentChanges</directory>
-            </fileset>
-            <fileset>
-              <directory>src/test/fitnesse/FitNesseRoot/files/testProgress</directory>
-            </fileset>
-            <fileset>
-              <directory>src/test/fitnesse/FitNesseRoot/files/testResults</directory>
+              <directory>${fitnesse.working}</directory>
+              <excludes>
+                 <exclude>${fitnesse.root}/${fitnesse.project.root}/**</exclude>
+                 <exclude>${fitnesse.root}/FrontPage/**</exclude>
+                 <exclude>${fitnesse.root}/PageFooter/**</exclude>
+                 <exclude>${fitnesse.root}/files/validering/**</exclude>
+                 <exclude>plugins.properties</exclude>
+                 <exclude>**/.gitignore</exclude>
+               </excludes>
             </fileset>
           </filesets>
         </configuration>
@@ -149,7 +141,7 @@
           <root>${fitnesse.root}</root>
           <createSymLink>false</createSymLink>
           <markerFile>${project.build.directory}/fitnesse-launcher-plugin-marker</markerFile>
-          <suite>IneraCertificate</suite>
+          <suite>${fitnesse.suite}</suite>
           <useProjectDependencies>
               <scope>compile</scope>
           </useProjectDependencies>
