--- a/web/pom.xml
+++ b/web/pom.xml
@@ -164,139 +164,88 @@
         </excludes>
       </resource>
     </resources>
-    <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-dependency-plugin</artifactId>
-      <version>2.8</version>
-      <executions>
-        <execution>
-          <id>copy</id>
-          <phase>process-resources</phase>
-          <goals>
-            <goal>unpack</goal>
-          </goals>
-          <configuration>
-            <artifactItems>
-              <artifactItem>
-                <groupId>se.inera.certificate.modules</groupId>
-                <artifactId>fk7263</artifactId>
-                <version>${project.version}</version>
-                <type>war</type>
-                <outputDirectory>${project.build.directory}/fk7263.war</outputDirectory>
-              </artifactItem>
-            </artifactItems>
-          </configuration>
-        </execution>
-      </executions>
-    </plugin>
-      <plugin>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.1.1.v20140108</version>
-        <configuration>
-          <webAppConfig>
-            <contextPath>/inera-certificate</contextPath>
-          </webAppConfig>
-          <contextXml>${basedir}/src/main/webapp/WEB-INF/jetty-context.xml</contextXml>
-          <contextHandlers>
-            <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
-              <war>${project.build.directory}/fk7263.war</war>
-              <contextPath>/fk7263</contextPath>
-            </contextHandler>
-          </contextHandlers>
-          <systemProperties>
-            <systemProperty>
-              <name>spring.profiles.active</name>
-              <value>${system.mode}</value>
-            </systemProperty>
-            <systemProperty>
-              <name>jetty.port</name>
-              <value>8080</value>
-            </systemProperty>
-            <systemProperty>
-              <name>java.awt.headless</name>
-              <value>true</value>
-            </systemProperty>            
-            <systemProperty>
-              <name>catalina.base</name>
-              <value>${project.build.directory}/catalina.base</value>
-            </systemProperty>
-            <systemProperty>
-              <name>certificate.config.file</name>
-              <value>${project.basedir}/config.properties</value>
-            </systemProperty>
-            <systemProperty>
-              <name>certificate.logback.file</name>
-              <value>${project.basedir}/certificate-logback.xml</value>
-            </systemProperty>
-            <systemProperty>
-              <name>fk7263.logback.file</name>
-              <value>classpath:fk7263-logback.xml</value>
-            </systemProperty>
-          </systemProperties>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.3.171</version>
-          </dependency>
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.24</version>
-          </dependency>
-          <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-broker</artifactId>
-            <version>5.8.0</version>
-          </dependency>
-          <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-kahadb-store</artifactId>
-            <version>5.8.0</version>
-          </dependency>
-          <dependency>
-            <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-jms_1.1_spec</artifactId>
-            <version>1.1.1</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-    </plugins>
-    <pluginManagement>
-      <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      org.apache.maven.plugins
-                    </groupId>
-                    <artifactId>
-                      maven-dependency-plugin
-                    </artifactId>
-                    <versionRange>[2.8,)</versionRange>
-                    <goals>
-                      <goal>unpack</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore/>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
+  <profiles>
+    <profile>
+      <id>jetty</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>9.1.1.v20140108</version>
+            <configuration>
+              <webAppConfig>
+                <contextPath>/inera-certificate</contextPath>
+              </webAppConfig>
+              <contextXml>${basedir}/src/main/webapp/WEB-INF/jetty-context.xml</contextXml>
+              <contextHandlers>
+                <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+                  <war>${inera.certificates.basedir}/fk7263/target/fk7263.war</war>
+                  <contextPath>/fk7263</contextPath>
+                </contextHandler>
+              </contextHandlers>
+              <systemProperties>
+                <systemProperty>
+                  <name>spring.profiles.active</name>
+                  <value>${system.mode}</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>jetty.port</name>
+                  <value>8080</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>java.awt.headless</name>
+                  <value>true</value>
+                </systemProperty>            
+                <systemProperty>
+                  <name>catalina.base</name>
+                  <value>${project.build.directory}/catalina.base</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>certificate.config.file</name>
+                  <value>${project.basedir}/config.properties</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>certificate.logback.file</name>
+                  <value>${project.basedir}/certificate-logback.xml</value>
+                </systemProperty>
+                <systemProperty>
+                  <name>fk7263.logback.file</name>
+                  <value>classpath:fk7263-logback.xml</value>
+                </systemProperty>
+              </systemProperties>
+            </configuration>
+            <dependencies>
+              <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.3.171</version>
+              </dependency>
+              <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.24</version>
+              </dependency>
+              <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-broker</artifactId>
+                <version>5.8.0</version>
+              </dependency>
+              <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-kahadb-store</artifactId>
+                <version>5.8.0</version>
+              </dependency>
+              <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-jms_1.1_spec</artifactId>
+                <version>1.1.1</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
